FDG-9485 Fix spacing of xr banner

--- a/src/components/banner-callout/banner-callout.module.scss
+++ b/src/components/banner-callout/banner-callout.module.scss
@@ -46,6 +46,7 @@
 
 .warningBannerXR {
   background-color: #faf3d1;
+  margin-top: 1rem;
   .sideTab {
     background-color: #ffbe2e;
   }
